Fix spacing in td cells

--- a/frontend/src/stylesheets/components/stats/_stats.scss
+++ b/frontend/src/stylesheets/components/stats/_stats.scss
@@ -1,11 +1,12 @@
 .stats-table {
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: space-between;
-    width: 98%;
+    display:block;
+    // width: 98%;
     height: 500px;
     border-spacing: 0;
     border-collapse: separate;
+    background-color: $blue;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .stats-headers{
@@ -31,32 +32,17 @@ tr:last-child td:last-child {
     border-bottom-right-radius: 25px;
 }
 
-
 .challenge{
-    border-top: 2px solid white;
     text-align: center;
     font-size: 30px;
-    border-radius: 25px;
+    color: $green;
+    font-weight: bold;
+    height: 89px;
 }
 
-.stat-card-one{
-  height: 500px;
-  width: 400px;
-  border-radius: 25px;
-  border: 20px solid rgba(255, 255, 255, 0.943); 
-  box-shadow: 5px 10px rgba(3, 3, 3, 0.162);
-}
-.stat-card-two{
-  height: 500px;
-  width: 400px;
-  border-radius: 25px;
-  border: 20px solid rgba(255, 255, 255, 0.943); 
-  box-shadow: 5px 10px rgba(3, 3, 3, 0.162);
-}
-.stat-card-three{
-  height: 500px;
-  width: 400px;
-  border-radius: 25px;
-  border: 20px solid rgba(255, 255, 255, 0.943); 
-  box-shadow: 5px 10px rgba(3, 3, 3, 0.162);
+td {
+    width: 400px;
+    padding: 10px;
+    margin-left: 5px;
+    border-top: 2px solid white;
 }
